# iw3linker_vs

./: .editorconfig  .gitignore  CMakeLists.txt  SETUP.md  d3dx9_34.dll.sln  d3dx9_34.sln
common/: common.h  common.vcxproj  common.vcxproj.filters  globals.cpp  globals.h  stdafx.cpp
d3dx9_34/: EntryPointPatch.cpp  Exports.cpp  ProxyLib.cpp  d3dx9_34.vcxproj  d3dx9_34.vcxproj.filters
d3dx9_34.dll/: EntryPointPatch.cpp  EntryPointPatch.h  Hashing.cpp  Hashing.h  ProxyLib.cpp  ProxyLib.h  d3dx9_34.cpp  d3dx9_34.dll.cpp  d3dx9_34.dll.vcxproj  d3dx9_34.dll.vcxproj.filters  dllmain.cpp  stdafx.cpp  stdafx.h
database/: DatabaseModule.cpp  DatabaseModule.h  allhooks.cpp  allhooks.h  database.cpp  database.h  database.vcxproj  database.vcxproj.filters  db_stream_save.cpp  db_stream_save.h  globals.cpp  globals.h  stdafx.cpp  stdafx.h  types.h
hooklib/: BaseHook.cpp  BaseHook.h  GlobalVar.h  HookStorage.cpp  HookStorage.h  IBaseHook.h  JumpHook.cpp  JumpHook.h  Memory.cpp  Memory.h  NativeFunc.h  ReplaceFunc.cpp  ReplaceFunc.h  Types.h  hooklib.h  hooklib.vcxproj  hooklib.vcxproj.filters  stdafx.cpp  stdafx.h
modman/: ModuleManager.cpp  modman.vcxproj  modman.vcxproj.filters  stdafx.cpp  stdafx.h
src/: EntryPointPatch.cpp  Exports.cpp  Exports.def  Hashing.cpp  Module.cpp  Module.h  ModuleManager.h  dllmain.cpp  ep_patch.cpp  hashing.hpp  module.hpp  module_manager.cpp  module_manager.hpp  proxy_lib.cpp  proxy_lib.hpp
src/core/: functions.cpp  functions.hpp  globals.cpp  structs.hpp
utility/: macro.h  stdafx.cpp  types.h  utility.vcxproj  utility.vcxproj.filters
(+29 files in other folders)
